Final add on page change on screen

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-/* body {
-	background-color: #80c7fa;
-
-} */
+header {
+	background-color: #e3f2fd;
+}
 
 #navbar .navbar-nav li:hover {
 	background-color: #fff;
